--- a/example/package.json
+++ b/example/package.json
@@ -3,12 +3,13 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"start": "node_modules/react-native/packager/packager.sh",
+		"start": "node node_modules/react-native/local-cli/cli.js start",
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "16.0.0-alpha.6",
-		"react-native": "^0.43.3"
+		"react": "^15.4.2",
+		"react-native": "0.40.0",
+		"react-native-search-list": "file:../"
 	},
 	"jest": {
 		"preset": "react-native"
