--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@unpourtous/react-native-search-list",
-  "version": "1.2.1",
+  "version": "1.2.2-0",
   "description": "react native component for search list view",
   "main": "index.js",
   "scripts": {
