--- a/package.json
+++ b/package.json
@@ -18,17 +18,20 @@
   "author": "haywood",
   "license": "MIT",
   "devDependencies": {
+    "babel-eslint": "^8.0.3",
     "babel-jest": "18.0.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react-native": "1.9.1",
-    "eslint": "^3.16.1",
+    "eslint": "^3.19.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-angular": "^2.3.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^6.10.3",
-    "eslint-plugin-standard": "^2.3.1"
+    "eslint-plugin-standard": "^2.3.1",
+    "standard": "^10.0.3",
+    "standardjs": "^1.0.0-alpha"
   },
   "directories": {
     "example": "example"
