--- a/example/package.json
+++ b/example/package.json
@@ -3,15 +3,18 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start --config rn-cli-config.js",
+		"start": "node node_modules/react-native/local-cli/cli.js start --config ./../../../../rn-cli-config.js",
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "^15.4.2",
-		"react-native": "0.40.0",
+		"react": "^16.0.0",
+		"react-native": "0.51.0",
 		"@unpourtous/react-native-search-list": "file:../"
 	},
 	"jest": {
 		"preset": "react-native"
+	},
+	"devDependencies": {
+		"babel-eslint": "^8.1.0"
 	}
 }
