--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "haywood",
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^8.0.3",
+    "babel-eslint": "^8.1.0",
     "babel-jest": "18.0.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react-native": "1.9.1",
@@ -45,11 +45,12 @@
   },
   "homepage": "https://github.com/UnPourTous/react-native-search-list#readme",
   "dependencies": {
+    "is-buffer": "^1.1.6",
     "js-pinyin": "^0.1.9",
     "md5": "^2.2.1",
     "prop-types": "^15.6.0"
   },
   "peerDependency": {
-    "react-native": ">= 0.17"
+    "react-native": ">= 0.40.0"
   }
 }
