--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -86,6 +86,9 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
+    aaptOptions {
+        cruncherEnabled = false
+    } 
     defaultConfig {
         applicationId "com.example"
         minSdkVersion 16
