--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,62 @@
-node_modules/*
-.idea/*
+# OSX
+#
+.DS_Store
 
-example/node_modules/*
+# Xcode
+#
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+project.xcworkspace
+
+# Android/IntelliJ
+#
+android/build/
+.idea
+android/.gradle
+android/local.properties
+android/*.iml
+!android/gradle/wrapper/gradle-wrapper.jar
+
+# node.js
+#
+node_modules/
+npm-debug.log*
+yarn-error.log*
+anonymous-cli-metrics.json
 _cacache/
 _logs/
-anonymous-cli-metrics.json
-example/_cacache/
-example/_logs/
-example/anonymous-cli-metrics.json
 
+# BUCK
+buck-out/
+\.buckd/
+*.keystore
+
+# fastlane
+#
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://docs.fastlane.tools/best-practices/source-control/
+
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
+
+# Bundle artifact
+*.jsbundle
+
+ios/build/*
