--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "homepage": "https://github.com/UnPourTous/react-native-search-list#readme",
   "dependencies": {
+    "hoek": "^5.0.3",
     "is-buffer": "^1.1.6",
     "js-pinyin": "^0.1.9",
     "md5": "^2.2.1",
