--- a/package.json
+++ b/package.json
@@ -23,26 +23,32 @@
     }
   ],
   "license": "MIT",
-  "devDependencies": {
-    "babel-eslint": "^8.1.0",
-    "babel-jest": "18.0.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react-native": "1.9.1",
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-plugin-angular": "^2.3.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-node": "^4.2.2",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^6.10.3",
-    "eslint-plugin-standard": "^2.3.1",
-    "standard": "^10.0.3",
-    "standardjs": "^1.0.0-alpha",
-    "react": "^16.0.0",
-    "react-native": "0.51.0"
+  "dependencies": {
+    "js-pinyin": "^0.1.9",
+    "md5": "^2.2.1",
+    "prop-types": "^15.6.0"
   },
-  "directories": {
-    "example": "example"
+  "devDependencies": {
+    "babel-eslint": "^10.0.2",
+    "babel-jest": "18.0.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react-native": "4.0.1",
+    "eslint": "^6.0.1",
+    "eslint-config-semistandard": "^14.0.0",
+    "eslint-config-semistandard-react": "^4.2.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-semistandard-react": "^4.1.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "react": "^16.0.0",
+    "react-native": "^0.51.0"
+  },
+  "peerDependencies": {
+    "react": "^16.0.0",
+    "react-native": ">= 0.51.0"
   },
   "repository": {
     "type": "git",
@@ -51,15 +57,5 @@
   "bugs": {
     "url": "https://github.com/zanechua/react-native-search-list/issues"
   },
-  "homepage": "https://github.com/zanechua/react-native-search-list#readme",
-  "dependencies": {
-    "hoek": "^5.0.3",
-    "is-buffer": "^1.1.6",
-    "js-pinyin": "^0.1.9",
-    "md5": "^2.2.1",
-    "prop-types": "^15.6.0"
-  },
-  "peerDependency": {
-    "react-native": ">= 0.40.0"
-  }
+  "homepage": "https://github.com/zanechua/react-native-search-list#readme"
 }
